<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="menu_collection_item_title">Collection</string>
    <string name="menu_search_item_title">Search</string>
    <string name="menu_scanner_item_title">Scanner</string>
    <string name="menu_quotes_item_title">Quotes</string>
    <string name="menu_profile_item_title">Profile</string>

    <!-- BookEditFragment -->
    <string name="add_book">Add book</string>
    <string name="edit_book">Edit book</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="number_of_pages">Number of pages</string>
    <string name="read_pages">Read pages</string>
    <string name="publication_date">Publication date</string>
    <string name="isbn" translatable="false">ISBN</string>
    <string name="description">Description</string>
    <string name="select_a_publication_date">Select a publication date</string>

    <string name="blank_book_title">Title not entered</string>
    <string name="blank_book_author">Author not entered</string>
    <string name="blank_book_number_of_pages">Number of pages not entered</string>
    <string name="read_pages_over_number_of_pages">Number of read pages cannot be higher than number of all pages</string>
    <string name="adding_book_error_message">An error occurred while adding the book</string>
    <string name="book_added_successfully">Book added successfully</string>
    <string name="editing_book_error_message">An error occurred while editing the book</string>
    <string name="book_edited_successfully">Book edited successfully</string>

    <!-- QuoteEditFragment -->
    <string name="quote">Quote</string>
    <string name="add_quote">Add quote</string>
    <string name="edit_quote">Edit quote</string>
    <string name="content">Content</string>
    <string name="book_title">Book title</string>
    <string name="blank_quote_content">Content not entered</string>
    <string name="blank_quote_author">Author not entered</string>
    <string name="quote_color_not_selected">Color not selected</string>
    <string name="adding_quote_error_message">An error occurred while adding the quote</string>
    <string name="quote_added_successfully">Quote added successfully</string>
    <string name="editing_quote_error_message">An error occurred while editing the quote</string>
    <string name="quote_edited_successfully">Quote edited successfully</string>

    <!-- ScannerFragment -->
    <string name="camera_permission_denied">Camera permission denied</string>
    <string name="camera_permission_permanently_denied">Camera permission permanently denied</string>
    <string name="image_file_saving_error_message">An error occurred while saving image to file</string>

    <!-- CollectionFragment -->
    <string name="progress_percentage" translatable="false">%1$d%%</string>
    <string name="next_page_to_read">Next page: %1$d</string>
    <string name="delete_book_dialog_title">Delete book</string>
    <string name="delete_book_dialog_message">Do you want to delete this book? All its reading log entries will be deleted.</string>
    <string name="book_deleted">Book deleted</string>
    <string name="archive_book_dialog_title">Archive book</string>
    <string name="archive_book_dialog_message">Do you want to archive this book?</string>
    <string name="book_archived">Book archived</string>
    <string name="archiving_book_error_message">An error occurred while archiving the book</string>
    <string name="deleting_book_error_message">An error occurred while deleting the book</string>
    <string name="empty_collection_message">You haven\'t got any books in your collection yet</string>

    <string-array name="add_book_dialog_options">
        <item>Add manually</item>
        <item>Search in Google Books</item>
        <item>Scan ISBN</item>
    </string-array>

    <!-- ReadingProgressDialogFragment -->
    <string name="reading_progress">Reading progress</string>
    <string name="finish_the_book">Finish the book</string>
    <string name="update_reading_progress">Update reading progress</string>
    <string name="invalid_read_pages_number_error_message">Invalid read pages number</string>
    <string name="reading_progress_edit_error_message">An error occurred while editing reading progress</string>
    <string name="reading_progress_updated">Reading progress updated successfully</string>

    <!-- QuotesFragment -->
    <string name="share_quote_chooser_title">Share the quote using:</string>
    <string name="delete_quote_dialog_title">Delete quote</string>
    <string name="delete_quote_dialog_message">Do you want to delete this quote?</string>
    <string name="quote_deleted">Quote deleted</string>
    <string name="deleting_quote_error_message">An error occurred while deleting the quote</string>
    <string name="empty_quotes_list_message">You haven\'t got any quotes yet</string>

    <!--- SearchFragment -->
    <string name="search_query">Search query</string>
    <string name="blank_search_query_error_message">Blank search query</string>
    <string name="empty_search_result_message">Empty search result</string>

    <!-- TextSelectionFragment -->
    <string name="recognize_text">Recognize text</string>
    <string name="text_selection">Text selection</string>
    <string name="restore_image">Restore image</string>
    <string name="text_selection_mode">Text selection mode</string>
    <string name="text_selection_mode_blocks">Blocks</string>
    <string name="text_selection_mode_lines">Lines</string>
    <string name="text_sleection_mode_words">Words</string>

    <!-- ReadingLogFragment -->
    <string name="reading_log">Reading log</string>
    <string name="empty_reading_log_message">Your reading log is empty</string>
    <plurals name="reading_log_entry_content">
        <item quantity="one">You read %1$d page</item>
        <item quantity="other">You read %1$d pages</item>
    </plurals>

    <!-- LogEntryDetailsDialogFragment -->
    <string name="start_page_number">Start page: %1$d</string>
    <string name="end_page_number">End page: %1$d</string>

    <!-- BookDetailsFragment -->
    <string name="book_details">Book details</string>
    <string name="read_pages_all_pages" translatable="false">%1$d/%2$d</string>

    <!-- ProfileFragment -->
    <string name="user_name">Name</string>
    <string name="email_address">Email address</string>
    <string name="phone_number">Phone number</string>
    <string name="sign_out_and_exit">Sign out and exit</string>
    <string name="sign_out_and_exit_dialog_message">Do you want to sign out and exit?</string>

    <!-- ProfileEditFragment -->
    <string name="edit_profile">Edit profile</string>
    <string name="invalid_email_address">Invalid email address</string>
    <string name="profil_edited_message">Profile edited successfully</string>
    <string name="profil_edit_error_message">An error occurred while editing the profile</string>
    <string name="statistics">Statistics</string>

    <!-- ReadingGoalFragment -->
    <string name="reading_goal">Reading goal</string>
    <string name="daily_reading_goal">Daily reading goal</string>
    <string name="daily_reading_goal_on">Daily reading goal on</string>
    <string name="daily_reading_goal_off">Daily reading goal off</string>
    <string name="reminder_time">Reminder time</string>
    <string name="reminder_time_not_selected_error_message">Reminder time not selected</string>
    <string name="number_of_pages_not_entered_error_message">Number of pages not entered</string>
    <string name="daily_reading_goal_setting_error_message">An error occurred while setting the daily reading goal</string>
    <string name="daily_reading_goal_cancelled">Daily reading goal cancelled</string>
    <string name="daily_reading_goal_set">Daily reading goal set successfully</string>

    <!-- StatisticsFragment -->
    <string name="general_statistics">General</string>
    <string name="weekly_statistics">Weekly</string>
    <string name="monthly_statistics">Monthly</string>
    <string name="yearly_statistics">Yearly</string>
    <string name="read_books">Read books</string>

    <!-- ArchiveFragment -->
    <string name="books_archive">Books archive</string>
    <string name="empty_books_archive_message">Your books archive is empty</string>
    <string name="book_archiving_date">Archived %1$s</string>
    <string name="book_unarchiving_success_message">Book unarchived successfully</string>
    <string name="book_unarchiving_error_message">An error occurred while unarchiving the book</string>
</resources>