<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_collection"
        android:icon="@drawable/icon_book"
        android:title="@string/menu_collection_item_title"
        app:showAsAction="always" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/icon_search"
        android:title="@string/menu_search_item_title"
        app:showAsAction="always" />

    <item
        android:id="@+id/navigation_scanner"
        android:icon="@drawable/icon_capture"
        android:title="@string/menu_scanner_item_title"
        app:showAsAction="always" />

    <item
        android:id="@+id/navigation_quotes"
        android:icon="@drawable/icon_quote"
        android:title="@string/menu_quotes_item_title"
        app:showAsAction="always" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/icon_person"
        android:title="@string/menu_profile_item_title"
        app:showAsAction="always" />
</menu>